--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -4,7 +4,52 @@ body
 h1,h2,h3,h4,h5,p,a
     font-family: Arial, Helvetica, sans-serif
 
+header
+    background-image: url(../img/banner.jpg)
+    box-shadow: inset 0 0 0 1000px #393842cc
+    background-size: 100%
+    padding-bottom: 150px
 
 nav
     display: flex
     justify-content: space-between
+    align-items: center
+    padding: 20px 50px
+
+    .bold
+        font-weight: 800
+
+    h1
+        color: white
+        font-weight: 100
+        font-size: 15px
+        
+
+#navbar 
+    a
+        text-decoration: none
+        color: #a9a9a9
+        font-size: 15px
+        margin: 3vh
+
+#headerTitle
+    color: white
+    text-align: center
+    margin-top: 100px
+
+    h1
+        font-size: 50px
+
+    p
+        color: #a9a9a9
+
+.btn
+    background-color: #f32853
+    color: white
+    font-weight: bold
+
+    border: none
+    padding: 15px 30px
+    border-radius: 3px
+
+    margin: 20px
