--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -28,7 +28,7 @@ nav
 #navbar 
     a
         text-decoration: none
-        color: #a9a9a9
+        color: #c3c3c3
         font-size: 15px
         margin: 3vh
 
@@ -41,7 +41,7 @@ nav
         font-size: 50px
 
     p
-        color: #a9a9a9
+        color: #c3c3c3
 
 .btn
     background-color: #f32853
@@ -53,3 +53,36 @@ nav
     border-radius: 3px
 
     margin: 20px
+
+// --------------SECTION1------------------
+
+#sect1
+    display: flex
+    justify-content: center
+    flex-wrap: wrap
+
+    margin-top: 100px
+
+#titleSect1
+    width: 400px
+
+    h2
+        font-size: 40px
+        line-height: 65px
+        margin: 0
+        color: #484848
+
+    h3
+        font-size: 20px
+        line-height: 35px
+        font-weight: 100
+        color: #aeaab4
+        margin-top: 0
+#txtSect1
+    width: 450px
+
+    p
+        margin-top: 0
+        line-height: 30px
+        margin-left: 50px
+        color: #868686
