--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,28 +57,30 @@ nav h1 {
   margin: 20px;
 }
 
-#sect1 {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  margin-top: 100px;
-}
-
-#titleSect1 {
-  width: 400px;
-}
-#titleSect1 h2 {
+.titleDark {
   font-size: 40px;
   line-height: 65px;
   margin: 0;
   color: #484848;
 }
-#titleSect1 h3 {
+
+.subTitleDark {
   font-size: 20px;
   line-height: 35px;
   font-weight: 100;
   color: #aeaab4;
   margin-top: 0;
+}
+
+#sect1 {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 100px 0;
+}
+
+#titleSect1 {
+  width: 400px;
 }
 
 #txtSect1 {
@@ -89,6 +91,55 @@ nav h1 {
   line-height: 30px;
   margin-left: 50px;
   color: #868686;
+}
+
+#sect2 {
+  background-color: #f6f6f6;
+  padding: 100px 0 50px 0;
+}
+
+#titleSect2 {
+  text-align: center;
+}
+
+#imgSect2 {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+#imgSect2 .card {
+  margin: 0 20px;
+  background-color: white;
+  box-shadow: 0px 0px 5px 0px rgba(176, 176, 176, 0.7490196078);
+  width: 570px;
+}
+#imgSect2 .card img {
+  width: 100%;
+}
+#imgSect2 .card p {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  color: #484848;
+  margin: 40px 0;
+}
+
+#btnSect2 {
+  display: flex;
+  justify-content: center;
+}
+#btnSect2 button {
+  margin: 50px 10px;
+}
+
+.btnB {
+  background-color: #484848;
+  color: white;
+  font-weight: bold;
+  border: none;
+  padding: 15px 30px;
+  border-radius: 3px;
+  margin: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
