--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -54,6 +54,20 @@ nav
 
     margin: 20px
 
+// ------------ALL SECTIONS----------------
+.titleDark
+    font-size: 40px
+    line-height: 65px
+    margin: 0
+    color: #484848
+
+.subTitleDark
+    font-size: 20px
+    line-height: 35px
+    font-weight: 100
+    color: #aeaab4
+    margin-top: 0
+
 // --------------SECTION1------------------
 
 #sect1
@@ -61,23 +75,11 @@ nav
     justify-content: center
     flex-wrap: wrap
 
-    margin-top: 100px
+    margin: 100px 0
 
 #titleSect1
     width: 400px
 
-    h2
-        font-size: 40px
-        line-height: 65px
-        margin: 0
-        color: #484848
-
-    h3
-        font-size: 20px
-        line-height: 35px
-        font-weight: 100
-        color: #aeaab4
-        margin-top: 0
 #txtSect1
     width: 450px
 
@@ -86,3 +88,54 @@ nav
         line-height: 30px
         margin-left: 50px
         color: #868686
+
+
+// --------------SECTION2----------------
+#sect2
+    background-color: #f6f6f6
+    padding:  100px 0 50px 0
+
+#titleSect2
+    text-align: center
+
+#imgSect2
+    display: flex
+    justify-content: center
+    flex-wrap: wrap
+
+    .card
+        margin: 0 20px
+        background-color: white
+        box-shadow: 0px 0px 5px 0px #b0b0b0bf
+        width: 570px
+
+        img
+            width: 100%
+
+        p
+            text-align: center
+            font-size: 20px
+            font-weight: 600
+            color: #484848
+            margin: 40px 0
+
+#btnSect2
+    display: flex
+    justify-content: center
+
+    button
+        margin: 50px 10px
+    
+.btnB
+    background-color: #484848
+    color: white
+    font-weight: bold
+
+    border: none
+    padding: 15px 30px
+    border-radius: 3px
+
+    margin: 20px
+// --------------SECTION3----------------
+
+// --------------SECTION4----------------
