--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -97,6 +97,7 @@ nav
 
 #titleSect2
     text-align: center
+    margin-bottom: 50px
 
 #imgSect2
     display: flex
@@ -137,5 +138,49 @@ nav
 
     margin: 20px
 // --------------SECTION3----------------
+#sect3
+    padding: 100px 0
+    max-width: 1180px
+    margin: auto
+    
+    img
+        border-radius: 100px
+        border: 8px solid #d7d7d7
 
+    h4
+        color: #484848
+        margin-top: 0
+        margin-bottom: 5px
+    
+    h5
+        font-weight: 100
+        color: #b0b0b0bf
+        margin-top: 0
+        margin-bottom: 5px
+
+    p
+        color: #767676
+        line-height: 30px
+        margin-bottom: 0
+
+#titleSect3
+    margin-bottom: 80px
+
+.rowSect3
+    display: flex
+    margin-top: 20px
+
+.rowFlex
+    display: flex
+    align-items: center
+    justify-content: center
+
+    div
+        margin: 20px
+
+.txtSectL
+    text-align: right
+
+.txtSectR
+    text-align: left
 // --------------SECTION4----------------
