--- a/public/css/style.css
+++ b/public/css/style.css
@@ -195,4 +195,25 @@ nav h1 {
   text-align: left;
 }
 
+#sect4 {
+  background-image: url(../img/banner.jpg);
+  box-shadow: inset 0 0 0 1000px rgba(57, 56, 66, 0.8);
+  background-size: 100%;
+  background-position-y: 50%;
+  color: white;
+  text-align: center;
+  margin-top: 50px;
+  padding: 50px 0;
+}
+#sect4 h2 {
+  font-size: 40px;
+}
+#sect4 h3 {
+  font-size: 20px;
+  line-height: 35px;
+  font-weight: 100;
+  color: #aeaab4;
+  margin-top: 0;
+}
+
 /*# sourceMappingURL=style.css.map */
