--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -183,4 +183,25 @@ nav
 
 .txtSectR
     text-align: left
+
+
 // --------------SECTION4----------------
+#sect4
+    background-image: url(../img/banner.jpg)
+    box-shadow: inset 0 0 0 1000px #393842cc
+    background-size: 100%
+    background-position-y: 50%
+    color: white
+    text-align: center
+    margin-top: 50px
+    padding: 50px 0
+
+    h2
+        font-size: 40px
+    
+    h3  
+        font-size: 20px
+        line-height: 35px
+        font-weight: 100
+        color: #aeaab4
+        margin-top: 0
