--- a/public/css/style.css
+++ b/public/css/style.css
@@ -216,4 +216,18 @@ nav h1 {
   margin-top: 0;
 }
 
+footer {
+  padding: 100px 0;
+  text-align: center;
+  color: rgba(176, 176, 176, 0.7490196078);
+}
+footer p {
+  font-size: 15px;
+  margin: 30px;
+}
+footer i {
+  font-size: 40px;
+  margin: 0 20px;
+}
+
 /*# sourceMappingURL=style.css.map */
