--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -205,3 +205,18 @@ nav
         font-weight: 100
         color: #aeaab4
         margin-top: 0
+
+
+//------------------FOOTER-------------------
+footer 
+    padding: 100px 0
+    text-align: center
+    color: #b0b0b0bf
+
+    p
+        font-size: 15px
+        margin: 30px
+
+    i
+        font-size: 40px
+        margin: 0 20px
