--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -220,3 +220,56 @@ footer
     i
         font-size: 40px
         margin: 0 20px
+
+
+//----------------RESPONSIVE-------------------
+@media screen  and (max-width:420px)
+h2,h3
+    padding: 0 30px
+.titleDark
+    font-size: 30px
+.subtitleDark
+    font-size: 20px
+
+header
+    background-size: cover
+
+    nav
+        flex-direction: column
+
+    #navbar
+        display: flex
+        text-align: center
+        flex-direction: column
+
+        a
+            margin: 10px
+
+#sect1
+    #titleSect1
+        text-align: center
+
+#sect2
+    .card
+        margin: 10px
+
+#sect3
+    text-align: center
+
+    .rowSect3
+        flex-direction: column
+    .rowFlex
+        flex-direction: column-reverse
+    .r
+        flex-direction: column
+    
+    .txtSectR
+        text-align: center
+    .txtSectL
+        text-align: center
+
+#sect4
+    background-size: cover
+
+footer
+    padding: 50px 0
